JS-project update

--- a/newStyle.css
+++ b/newStyle.css
@@ -38,6 +38,21 @@ body {
   padding: 40px;
 }
 
+@media (max-width: 768px) {
+  .hero {
+    display: flex;
+    flex-direction: column !important;
+    text-align: center;
+    align-items: center;
+  }
+
+  .hero img {
+    max-width: 90%;
+    height: auto;
+    margin-top: 20px;
+  }
+}
+
 .category {
   background: #fff;
   padding: 20px;
